[gd_scene load_steps=4 format=3]

[node name="TestAshveilAmbience" type="Node3D"]
script = ExtResource( 1 )

[node name="AmbiencePlayer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AmbienceController" type="Node3D" parent="."]
script = ExtResource( 3 )

[node name="AmbienceController3D" type="Node3D" parent="."]
script = ExtResource( 4 )
base_player = NodePath("BasePlayer")
mid_players = [ NodePath("MidPlayer1"), NodePath("MidPlayer2") ]
event_players = [ NodePath("EventPlayer1") ]
collapse_players = [ NodePath("CollapsePlayer1") ]

[node name="BasePlayer" type="AudioStreamPlayer3D" parent="."]
bus = "AshveilBase"
autoplay = false

[node name="MidPlayer1" type="AudioStreamPlayer3D" parent="."]
bus = "AshveilMid"
autoplay = false

[node name="MidPlayer2" type="AudioStreamPlayer3D" parent="."]
bus = "AshveilMid"
autoplay = false

[node name="EventPlayer1" type="AudioStreamPlayer3D" parent="."]
bus = "AshveilEvent"
autoplay = false

[node name="CollapsePlayer1" type="AudioStreamPlayer3D" parent="."]
bus = "AshveilCollapse"
autoplay = false

[ext_resource path="res://scripts/tests/test_ashveil_ambience.gd" type="Script" id=1]
[ext_resource path="res://audio/ambient/extreme_horror_ambience_player.gd" type="Script" id=2]
[ext_resource path="res://scripts/audio/ashveil_ambience_controller.gd" type="Script" id=3]
[ext_resource path="res://scripts/world/ashveil_ambience_3d_controller.gd" type="Script" id=4]